Removed reserved word from variables

--- a/templates/container-template.xml.j2
+++ b/templates/container-template.xml.j2
@@ -1,5 +1,5 @@
 <domain type='kvm'>
-  <name>{{ name }}</name>
+  <name>{{ vmName }}</name>
   <uuid></uuid>
   <metadata>
     <libosinfo:libosinfo xmlns:libosinfo="http://libosinfo.org/xmlns/libvirt/domain/1.0">
