--- a/templates/container-template.xml.j2
+++ b/templates/container-template.xml.j2
@@ -6,7 +6,7 @@
       <libosinfo:os id="http://centos.org/centos/8"/>
     </libosinfo:libosinfo>
   </metadata>
-  <memory unit='KiB'>{{ maxmemory }}</memory>
+  <memory unit='KiB'>{{ maxMemory }}</memory>
   <currentMemory unit='KiB'>{{ memory }}</currentMemory>
   <vcpu placement='static'>{{ vcpu }}</vcpu>
   <os>
