--- a/templates/container-template.xml.j2
+++ b/templates/container-template.xml.j2
@@ -13,7 +13,7 @@
     <type arch='{{ arch }}' machine='pc-q35-rhel7.6.0'>hvm</type>
     <boot dev='cdrom'/>
     <boot dev='hd'/>
-    <bootmenu enable='{{ bootmenu }}'/>
+    <bootmenu enable='{{ bootMenu }}'/>
   </os>
   <features>
     <acpi/>
@@ -124,4 +124,3 @@
     </rng>
   </devices>
 </domain>
-
