--- a/templates/kickstart.j2
+++ b/templates/kickstart.j2
@@ -242,10 +242,10 @@ yum update -y
 %end
 
 # Enable OpenSCAP
-#%addon org_fedora_oscap
-#content-type = scap-security-guide
-#profile = pci-dss
-#%end
+%addon org_fedora_oscap
+content-type = scap-security-guide
+profile = pci-dss
+%end
 
 %anaconda
 pwpolicy root --minlen=6 --minquality=1 --notstrict --nochanges --notempty
