Added Oscap support

--- a/templates/kickstart.j2
+++ b/templates/kickstart.j2
@@ -242,7 +242,7 @@ yum update -y
 %end
 
 # Enable OpenSCAP
-%addon org_fedora_oscap
+%addon org_centos_oscap
 content-type = scap-security-guide
 profile = pci-dss
 %end
